year4/System-on-a-chip/lab2/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7a100t-csg324-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'lab2/.apc/main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from lab2/.apc/main.c:1:
lab2/.apc/main.c:18:22: error: use of undeclared identifier 'n'
 for (int i = 0; i < n; i++){
                     ^
lab2/.apc/main.c:19:23: error: use of undeclared identifier 'n'
  for (int j = 0; j < n ; j++){
                      ^
lab2/.apc/main.c:28:22: error: use of undeclared identifier 'n'
 for (int i = 0; i < n; i++){
                     ^
lab2/.apc/main.c:35:21: error: use of undeclared identifier 'n'
 for(int i = 0; i < n; i++)
                    ^
lab2/.apc/main.c:52:10: error: use of undeclared identifier 'n'
 int j = n - 2;
         ^
lab2/.apc/main.c:56:10: error: use of undeclared identifier 'n'
 int k = n - 1;
         ^
lab2/.apc/main.c:59:21: error: use of undeclared identifier 'n'
 int l = j + 1, r = n - 1;
                    ^
lab2/.apc/main.c:71:22: error: use of undeclared identifier 'n'
 for (int i = 0; i < n; i++) {
                     ^
lab2/.apc/main.c:72:27: error: use of undeclared identifier 'n'
  for (int j = i + 1; j < n; j++) {
                          ^
lab2/.apc/main.c:86:21: error: use of undeclared identifier 'n'
 for(int i = 0; i < n; i++) {
                    ^
10 errors generated.
